--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,13 @@ nav a {
     margin: 0 10px;
 }
 
+.menu {
+    color: #fff;
+    cursor: pointer;
+    font-size: 20px;
+    display: none;
+}
+
 .logo-rence {
     font-size: 1.5rem;
     font-weight: 500;
@@ -168,7 +175,7 @@ nav a {
 
 .share {
     position: absolute;
-    bottom: 3rem;
+    bottom: 2rem;
     left: 10%;
     display: flex;
     align-items: center;
@@ -209,4 +216,68 @@ footer {
     padding: 10px;
     bottom: 0;
     /* width: 100%; */
+}
+
+
+/* RESPONSIVE */
+
+@media screen and (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .parent-link {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .home {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .share {
+        position: relative;
+    }
+
+    .share p {
+        font-size: 15px;
+        margin-left: -40px;
+    }
+
+    .social i {
+        font-size: 15px;
+        margin-left: -5px;
+    }
+}
+
+@media screen and (max-width: 376px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .parent-link {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .home {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .share {
+        position: relative;
+        margin-top: 50px;
+    }
+
+    .share p {
+        font-size: 15px;
+        margin-left: -40px;
+    }
+
+    .social i {
+        font-size: 15px;
+        margin-left: -5px;
+    }
 }
